--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require":      {
         "symfony/framework-bundle": "2.*",
-        "knplabs/gaufrette":        "~0.1.7"
+        "knplabs/gaufrette":        "0.2.*@dev"
     },
     "require-dev": {
         "symfony/yaml": "2.*",
